KeePassDX(2.5beta29)
 * Delete registered KeyFile after save new credentials
 * Fix title and username entry view refresh after an update
 * Fix database lock request (open notification always active)

KeePassDX(2.5beta28)
 * Fix read only database
 * Upgrade to Android SDK 29

KeePassDX (2.5beta27)
 * New setting to hide broken links
 * Show URL when title is empty
 * Setting to open search field at database opening
 * Fix settings for database locations
 * Fix error message when database file not writable
 * Fix appearance refresh settings
 * Sort optimization

KeePassDX (2.5.0.0beta26)
 * Download attachments
 * Change file size string format
 * Prevent screenshot for all screen
 * Auto performed "Go" key in Magikeyboard
 * Restore and delete entry history
 * Setting to hide expired entries
 * New Black theme
 * Fix crash when clearing clipboard
 * Fix attachments compressions
 * Fix dates
 * Fix UUID message for Database v1

KeePassDX (2.5.0.0beta25)
 * Setting for Recycle Bin
 * Fix Recycle bin issues
 * Fix TOTP
 * Fix infinite save
 * Fix update group
 * Fix OOM

KeePassDX (2.5.0.0beta24)
 * Add OTP (HOTP / TOTP)
 * Add settings (Color, Security, Master Key)
 * Show history of each entry
 * Auto repair database for nodes with same UUID
 * Management of expired nodes
 * Multi-selection for actions (Cut - Copy - Delete)
 * Open/Save database as service / Add persistent notification
 * Fix settings / edit group / small bugs

KeePassDX (2.5.0.0beta23)
 * New, more secure database creation workflow
 * Recognize more database files
 * Add alias for history files (WARNING: history is erased)
 * New Biometric unlock (Fingerprint with new API)
 * Fix entry references
 * Fix OOM with KeyFile
 * Fix small issues

KeePassDX (2.5.0.0beta22)
 * Rebuild code for actions
 * Add UUID as entry view
 * Fix bug with natural order
 * Fix number of entries in databaseV1
 * New entry views

KeePassDX (2.5.0.0beta21)
 * Fix nested groups no longer visible in V1 databases