@@ -69,7 +69,6 @@
     <string name="error_pass_gen_type">Has de seleccionar almenys un tipus de generador de contrasenyes</string>
     <string name="error_pass_match">Les contrasenyes no coincideixen.</string>
     <string name="error_rounds_too_large">Massa passades. Establint a 2147483648.</string>
-    <string name="error_title_required">És necessari un títol.</string>
     <string name="error_wrong_length">Insereix un enter positiu al camp longitud</string>
     <string name="file_browser">Explorador d\'arxius</string>
     <string name="generate_password">Generar contrasenya</string>
