@@ -71,7 +71,6 @@
     <string name="error_pass_match">Οι κωδικοί δεν ταιριάζουν.</string>
     <string name="error_rounds_too_large">Οι \"κύκλοι μετασχηματισμού\" είναι πολύ υψηλοί. Ρύθμιση στο 2147483648.</string>
     <string name="error_string_key">Κάθε σειρά πρέπει να έχει όνομα πεδίου.</string>
-    <string name="error_title_required">Προσθέστε έναν τίτλο.</string>
     <string name="error_wrong_length">Εισάγετε ένα θετικό ακέραιο αριθμό στο πεδίο \"Μήκος\".</string>
     <string name="field_name">Όνομα πεδίου</string>
     <string name="field_value">Τιμή πεδίου</string>
