@@ -67,7 +67,6 @@
     <string name="error_pass_gen_type">Debe seleccionar al menos un tipo de generación de contraseñas.</string>
     <string name="error_pass_match">Las contraseñas no coinciden.</string>
     <string name="error_rounds_too_large">Pasadas demasiado grande. Establecido a 2147483648.</string>
-    <string name="error_title_required">Añada un título.</string>
     <string name="error_wrong_length">Proporcione un número entero positivo en el campo «Longitud».</string>
     <string name="file_browser">Explorador de archivos</string>
     <string name="generate_password">Generar contraseña</string>
