@@ -76,7 +76,6 @@
     <string name="error_pass_match">Les mots de passe ne correspondent pas.</string>
     <string name="error_rounds_too_large">« Tours de transformation » trop grand. Définition à 2147483648.</string>
     <string name="error_string_key">Chaque chaîne doit avoir un nom de champ.</string>
-    <string name="error_title_required">Veuillez ajouter un titre.</string>
     <string name="error_wrong_length">Veuillez saisir un entier positif dans le champ « Longueur ».</string>
     <string name="error_autofill_enable_service">Impossible d’activer le service de remplissage automatique.</string>
     <string name="field_name">Nom du champ</string>
