@@ -71,7 +71,6 @@
     <string name="error_pass_match">A jelszavak nem egyeznek meg.</string>
     <string name="error_rounds_too_large">A „Transzformációs körök” száma túl nagy. Beállítás 2147483648-ra.</string>
     <string name="error_string_key">Minden karakterlánchoz szükséges egy mezőnév.</string>
-    <string name="error_title_required">Adjon hozzá egy címet.</string>
     <string name="error_wrong_length">Írjon be egy pozitív egész számot a „Hossz” mezőbe.</string>
     <string name="field_name">Mezőnév</string>
     <string name="field_value">Mezőérték</string>
