@@ -71,7 +71,6 @@
     <string name="error_pass_match">Le password non corrispondono.</string>
     <string name="error_rounds_too_large">\"Livello\" troppo alto. Impostato a 2147483648.</string>
     <string name="error_string_key">Ogni stringa deve avere un nome.</string>
-    <string name="error_title_required">Aggiungi un titolo.</string>
     <string name="error_wrong_length">Inserisci un numero naturale positivo nel campo \"lunghezza\".</string>
     <string name="field_name">Nome campo</string>
     <string name="field_value">Valore campo</string>
