@@ -78,7 +78,6 @@
     <string name="error_pass_match">비밀번호가 일치하지 않습니다.</string>
     <string name="error_rounds_too_large">\"Transformation rounds\" 가 너무 높습니다. 2147483648로 설정합니다.</string>
     <string name="error_string_key">각 항목은 필드 이름을 가져야 합니다.</string>
-    <string name="error_title_required">제목을 입력하십시오.</string>
     <string name="error_wrong_length">\"길이\" 필드에는 양수를 입력하십시오.</string>
     <string name="error_autofill_enable_service">자동 채우기 서비스를 활성화할 수 없습니다.</string>
     <string name="error_move_folder_in_itself">그룹을 자신에게 옮길 수 없습니다.</string>
