@@ -52,7 +52,6 @@
     <string name="error_pass_match">Paroles nesakrīt.</string>
     <string name="error_rounds_too_large">Līmenis pārāk liels. Maksimālais 2147483648</string>
     <string name="error_string_key">A field name is required for each string.</string>
-    <string name="error_title_required">Nepieciešams nosaukums.</string>
     <string name="error_wrong_length">Norādiet garumu lielāku par nulli</string>
     <string name="field_name">Lauka nosaukums</string>
     <string name="field_value">Lauka vērtība</string>
