@@ -77,7 +77,6 @@
     <string name="error_pass_match">Passordene samsvarer ikke.</string>
     <string name="error_rounds_too_large">\"Omganger\" er for stort. Setter til 2147483648.</string>
     <string name="error_string_key">Hver streng må ha et feltnavn.</string>
-    <string name="error_title_required">En tittel er påkrevd.</string>
     <string name="error_wrong_length">Skriv inn et positivt heltall i \"Lengde\"-feltet.</string>
     <string name="error_autofill_enable_service">Autofyll-tjenesten kan ikke skrus på.</string>
     <string name="error_move_folder_in_itself">Kan ikke flytte gruppe inn i seg selv.</string>
