@@ -72,7 +72,6 @@
     <string name="error_pass_match">Lösenorden matchar inte.</string>
     <string name="error_rounds_too_large">\"Transformationsrundor\" är för stort. Sätter värdet till 2147483648.</string>
     <string name="error_string_key">Varje sträng måste ha ett fältnamn.</string>
-    <string name="error_title_required">Lägg till en titel.</string>
     <string name="error_wrong_length">Ange ett positivt heltal i fältet för längd.</string>
     <string name="field_name">Fältnamn</string>
     <string name="field_value">Fältvärde</string>
