@@ -1,3 +1,4 @@
  * Delete registered KeyFile after save new credentials
  * Fix title and username entry view refresh after an update
  * Fix database lock request (open notification always active)
+ * Allow empty title in entries
