@@ -2,6 +2,7 @@ KeePassDX(2.5beta29)
  * Delete registered KeyFile after save new credentials
  * Fix title and username entry view refresh after an update
  * Fix database lock request (open notification always active)
+ * Allow empty title in entries
 
 KeePassDX(2.5beta28)
  * Fix read only database
